--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
     "@types/node": "^12.20.16",
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.21.1",
+    "firebase": "^8.8.0",
+    "immutable": "^4.0.0-rc.14",
+    "moment": "^2.29.1",
+    "query-string": "^4.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "thunk": "^0.0.1",
     "typescript": "^4.3.5",
     "web-vitals": "^1.1.2"
   },
@@ -39,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/query-string": "^6.3.0",
+    "@types/react-router-dom": "^5.1.8"
   }
 }
